...
    <string name="pasoDatosInfo">DatosInfo</string>
    <string name="pasoDatosGasolinera">DatosGasolinera</string>
    <string name="pasoListaGasolinerasFiltros">ListaGasolineras</string>
    <string name="aplicar">Aplicar</string>
    <string name="marca">Marca</string>
    <string name="tipoGasolina">Tipo de Gasolina</string>
    <string name="guardar">GUARDAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="aceptar">ACEPTAR</string>
    <string name="ok">OK</string>
    <string name="complete_nombre">El campo Nombre es obligatorio</string>
    <string name="complete_marca">La marca se encuentra sin seleccionar</string>
    <string name="complete_descuento">El campo Descuento es obligatorio</string>
...
    <string name="campo_vacio">Campo vacío</string>
    <string name="marca_invalida">Marca inválida</string>
    <string name="localidad_invalida">Localidad inválida</string>
    <string name="filtrar_marcaGasolinera">Filtrar por marca </string>
    <string name="filtrar_tipoGasolina">Filtrar por tipo de gasolina</string>
    <string name="slider_menu_text_nueva_tarjeta_descuento">Añadir tarjeta descuento</string>
    <string name="title_fav">Favoritos</string>
    <string name="filtrar_favoritos">Filtrar favoritos</string>
    <string name="filtrar_precioMaximo">Filtrar por precio máximo</string>
    <string name="mensaje_info_pmax">No hay ninguna gasolinera disponible</string>
    <string name="mensaje_error_pmaxVacio">El campo precio es obligatorio</string>
    <string name="mensaje_error_pmaxCero">El precio debe ser mayor que cero</string>
    <string name="mensaje_error_pmaxCarcaterNovalido">Precio no válido</string>
...
