...
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/listViewGasolineras"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

        </ListView>

...
