...
        android:id="@+id/anhadeComentarioEtiqueta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anhade_comentario" />

    <EditText
        android:id="@+id/textBox_anhadeComentario"
        android:layout_width="match_parent"
        android:layout_height="141dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:autofillHints="Escribe un comentario" />
...
