...
            android:layout_marginLeft="@dimen/marginLabelsPrecio"
            android:layout_toRightOf="@+id/textViewGasolina95LabelFav" />

    </RelativeLayout>

    <Button
        android:id="@+id/buttonModifica"
        android:layout_width="38dp"
        android:layout_height="38dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="0dp"
        android:text="M"
        android:focusable="false"/>
...
